fix(ledger): add readability for better dx

--- a/packages/flowledger-dapp/style.css
+++ b/packages/flowledger-dapp/style.css
@@ -663,3 +663,6 @@ input:user-valid { border-color: var(--income-color); }
 
 /* Visual Tweak #403 */
 .tweak-403 { opacity: 1; }
+
+/* Visual Tweak #415 */
+.tweak-415 { opacity: 1; }
